global/_panels.scss
/* ... */
.body--hide-feature-images .a-panel--feature .item.item--article {
  .item__imagecontainer {
    display: none;
  }
}

@media only screen and (max-width: 1079px) {
  .a-panel--feature .item.item--article:not(:has(.item__imagecontainer)) {
    padding-top: 0;
  }
}

.a-panel.a-panel--hasbackground .a-panel__title {
  color: #050505;
  font-weight: 700;
}

h2.a-panel__title {
  color: #050505;
  font-weight: 700;
  font-size: $h2-font-size;
}

.a-panel--feature h2.a-panel__title {
  display: block;
  visibility: visible;
  border: 0;
  clip: rect(0 0 0 0);
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  color: #000;
  background: #fff;
}

.body--display-feature-title .a-panel--feature h2.a-panel__title {
  color: #050505;
  font-weight: 700;
  font-size: $h2-font-size;
  width: auto;
  overflow: visible;
  margin: revert;
  height: auto;
  
  position: relative;
}

.item.item--article .item__title a {
  color: $list-panel-link-color;
  border-bottom: solid 2px $list-panel-link-color;
  text-decoration: none;

  &:hover {
    color: $list-panel-link-color-hover;
    border-bottom: solid 2px $list-panel-link-color-hover;
    text-decoration: none;
  }

  &:focus {
    color: #050505;
    background-color: $focus-color;
    border-bottom: solid 2px #050505;
    text-decoration: none;
  }
}

.item__content .item__sublink {
  color: $link-color;
  // border-bottom: solid 1px transparent;
  border-bottom: none;

  &:hover {
    color: $link-color-darken;
    // border-bottom: solid 1px $link-color-darken;
    border-bottom: none;
    text-decoration: underline;
  }

  &:focus {
    color: #050505;
    background-color: $focus-color;
    // border-bottom: solid 1px #050505;
    border-bottom: none;
    text-decoration: underline;
  }
}

@media only screen and (max-width: 600px) {
  .a-panel__content {
    padding: 30px 10px;
  }
}

.a-panel.a-panel--related .a-panel__content .grid--related {
  display: flex;
  align-items: stretch;
}
.a-panel.a-panel--related .grid__cellwrap {
  height: 100%;
}

/* .a-panel__link Link button used in Panels now set in _buttons.scss  */

.ra-block {
  height: 100%;
}

.ra-block .ra-block__content {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

// 643 - first related image

.a-relimage {
  display: none;
}

// 644 - list templates

.item__content {
  padding: 20px;
}

.item.item--article {
  border: 1px solid #fff;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.12), 0 0 2px rgba(0, 0, 0, 0.12);
  padding: 0px; 
  margin: 0;
  text-align: left;
}
.item.item--article .item__title {
  font-weight: 700;
  margin: 15px 0px 10px 0px;
  margin-top: 0 !important;
}
.item.item--article .item__title a {
  font-size: $h5-font-size;

  &:focus {
    outline: none;
  }
}
.item.item--article .item__body {
  margin-block-end: 16px;
}



.grid--2col>.grid__cell:nth-child(2n+1) {
  clear: none;
}

.grid--2col[data-grid-maxcols="2"]  {
  .grid__cell {
    width: 50%;
  }
}

@media only screen and (max-width: 850px) {
  .grid--2col[data-grid-maxcols="2"]  {
    .grid__cell {
      width: 100%;
    }
  }
}

// stage

.a-panel.a-panel--pt.a-panel--stage {

  .n-stage .n-stage-alert {
    background-color: $button-primary-color;
    color: #fff;

    .n-stage-alert__title {
      color: #fff;
    }

    &:hover {
      color: #fff;
      .n-stage-alert__title {
        text-decoration: underline;
        color: #fff;
      }
    }
    &:focus {
      color: #050505;
      .n-stage-alert__title {
        text-decoration: underline;
        color: #050505;
      }
    }
  }

  .a-panel__summary, p {
    color: #fff;
  }

  .gi-sitenav--stage .gi-sitenav__link--lvl2 {
    background-color: #fff;
  }

  .gi-sitenav--stage .gi-sitenav__link--lvl1 {
    &:hover {
      box-shadow: none;
      color: #fff;
    }
  }

  // menu button
  .gi-sitenav--stage .gi-sitenav__item--lvl1:last-child {
    margin-left: 15px;

    .gi-sitenav__link--lvl1 {
      background-color: $button-primary-color;
      margin: 0px;
      padding-left: 55px; // (40 + 15)
    } 
  }

  .card__actions .cta-link--stage {
    background-color: $button-primary-color;
    text-align: right;
  }
  .card__actions .cta-link::after {
    content: none;
  }

  .card--stage .card__content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    .card__innercontent {
      margin-bottom: 20px;
    }

    .card__imagecontainer {
      margin-bottom: 10px;

      figure.gi-responsiveimage, .gi-responsiveimage__imagewrapper, .gi-responsiveimage__image {
        max-height: 280px;
      }
    }
  }
}



// Parallax panels

.a-panel--pt.a-panel--parallax {
  background-color: #fff;
}

.a-panel--pt.a-panel--parallax .a-panel__content {
  background-color: transparent;
  color: #050505;
  text-shadow: none;

  .grid--feature .grid__cellwrap {
    padding: 14px;
  }
}

@media only screen and (max-width: 1200px) {
  .a-panel--pt.a-panel--parallax .fa-block {
    margin: 10px;
  }
}
/* ... */

